# number_frequencies

./: .gitignore  1_get_number_freqs.ipynb  2_analysis_number_freqs.ipynb  5_both_models.ipynb  README.md  data_ngram_allLangsPerMilion.csv  predicted_freq_mdl.csv  pyproject.toml  simplest_rsa_numbers.Rmd  temp.csv  tests.ipynb
tables/: divisibility_vs_multiplicity.csv  language_regression_formatted.csv  language_regression_formatted.xlsx  models_regression_formatted.csv  models_regression_formatted.xlsx
